--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,23 +1,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sage_caregivers">
+    package="com.awesomeproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+
     <application
       android:allowBackup="true"
       android:label="@string/app_name"
-      android:screenOrientation="portrait"
       android:icon="@mipmap/ic_launcher"
       android:theme="@style/AppTheme">
-    <uses-library android:name="com.google.android.maps" />
-    <meta-data
-          android:name="com.google.android.geo.API_KEY"
-          android:value="AIzaSyA14wB7jTydJEV2ZHie3QdcKhwdpI3XZtk"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
-        android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
