--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -9,3 +9,5 @@ project(':react-native-gmaps').projectDir = new File(rootProject.projectDir, '..
 
 include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+include ':react-native-icons'
+project(':react-native-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-icons/android')
