--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-preset-stage-3": "^6.5.0",
     "moment": "^2.11.2",
     "moment-timezone": "^0.5.0",
-    "react-native": "^0.18.1",
+    "react": "^0.14.8",
+    "react-native": "^0.22.2",
     "react-native-button": "^1.3.1",
     "react-native-checkbox": "^1.0.8",
     "react-native-date": "^1.0.3",
