--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,14 @@
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
+      android:screenOrientation="portrait"
       android:theme="@style/AppTheme">
+      <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyA14wB7jTydJEV2ZHie3QdcKhwdpI3XZtk"/>
       <activity
         android:name=".MainActivity"
+        android:screenOrientation="portrait"
         android:label="@string/app_name"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
         <intent-filter>
